Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 15.0.0
-
None
-
0ee1df823 (16.0)
Description
Currently, file markers are reloaded every time the end-version selector in the issue-list is changed. This is not the expected behavior. The markers should rather always be taken from the latest available analysis version and consequently don't need to be reloaded upon end-version change in the issue-list.
See excerpt from the specification document below. This should likely be implemented before the source-code diffing feature that moves the markers to the correct place if the local file differs from the analyzed file.
Editor annotations pipeline:
- convert local path to analysis path (server-side path, see path mapping below)
- DashboardInfoDto::projects ProjectReferenceDto::url (+ filename argument) → FileViewDto
- FileViewDto::sourceCodeUrl → plain text source code at analysis time (for diff to correct annotation position, see below)
- FileViewDto::lineMarkers LineMarkerDto::issueUrl + "/properties" (+ FileViewDto::version as version get argument) → html+css+javascript for issue details, including description
Attachments
Issue Links
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTCREATORBUG-32373 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
619356,2 | Axivion: Fix version handling for markers | 16.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |