Axivion: Fix version handling for markers

Do not use the versioned marker, but the last available
version instead.
Do not refetch markers on changing the version end.

Fixes: QTCREATORBUG-32373
Change-Id: I963af916eb37f965131577eb8844aa0b3473a72c
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
Reviewed-by: Mohammad Mehdi Salem Naraghi <mehdi.salem@qt.io>